@@ -327,7 +327,7 @@ class SC_mod_web_ts_index extends t3lib_SCbase {
 		list($out['cache_pages']) = $GLOBALS['TYPO3_DB']->sql_fetch_row($res);
 
 		$res = $GLOBALS['TYPO3_DB']->exec_SELECTquery(
-			'count(page_id)',
+			'count(id)',
 			'cache_pagesection',
 			''
 		);
