@@ -23,11 +23,12 @@
 	* Cleaned up some code regarding the page caching to prepare for transition to t3lib_cache
 	* Added columns to cache_pages needed for the t3lib_cache DB backend
 	* Fixed bug in t3lib_cache: t3lib_cache_AbstractCache->save() didn't request a lifetime parameter, but the cache backends do
-	* Changed adding and retrieving a page to/from the cache to use the t3lib_cache
+	* Changed adding and retrieving a page to/from the cache (cache_pages) to use the t3lib_cache
 	* Added a method flushByTags() to the t3lib_cache classes
 	* Added a method addCacheTags() to tslib_fe so that extensions can easily tag cache entries for pages
 	* Added the caching framework in typo3/init.php so that it is available in the BE, too
 	* Added class t3lib_cache to easily initialize the various caches in TYPO3 (cache_pages only for now)
+	* Changed table cache_pagesection to use t3lib_cache
 
 2008-09-23  Martin Kutschker  <masi@typo3.org>
 
